# ChangeLog for app-admin/php-toolkit
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/php-toolkit/ChangeLog,v 1.18 2006/08/25 05:24:01 sebastian Exp $

  25 Aug 2006; Sebastian Bergmann <sebastian@gentoo.org>
  php-toolkit-1.0-r2.ebuild:
  Fix bug #145035.

  18 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  php-toolkit-1.0-r2.ebuild:
  Add ~x86-fbsd keyword.

  26 Jan 2006; Jeroen Roovers <jer@gentoo.org> php-toolkit-1.0-r2.ebuild:
  Marked hppa (bug #119436).

  25 Jan 2006; Bryan Østergaard <kloeri@gentoo.org
  php-toolkit-1.0-r2.ebuild:
  Stable on alpha.

  23 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org>
  php-toolkit-1.0-r2.ebuild:
  Unstable on hppa.

  21 Jan 2006; Jason Wever <weeve@gentoo.org> php-toolkit-1.0-r2.ebuild:
  Stable on SPARC wrt bug #119436.

  21 Jan 2006; <nixnut@gentoo.org> php-toolkit-1.0-r2.ebuild:
  Added ppc keyword. bug 119436

  21 Jan 2006; Simon Stelling <blubb@gentoo.org> php-toolkit-1.0-r2.ebuild:
  stable on amd64

  19 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  php-toolkit-1.0-r2.ebuild:
  Stable on x86.

  18 Jan 2006; Markus Rothe <corsair@gentoo.org> php-toolkit-1.0-r2.ebuild:
  Stable on ppc64; bug #119436

*php-toolkit-1.0-r2 (16 Jan 2006)

  16 Jan 2006; Luca Longinotti <chtekk@gentoo.org>
  files/php-select-modules/libapache.sh, -php-toolkit-1.0-r1.ebuild,
  +php-toolkit-1.0-r2.ebuild:
  Fix bug #119136.

*php-toolkit-1.0-r1 (04 Jan 2006)

  04 Jan 2006; Luca Longinotti <chtekk@gentoo.org>
  files/php-select-modules/libsymlink.sh, -php-toolkit-1.0.ebuild,
  +php-toolkit-1.0-r1.ebuild:
  Fix bug #117733.

  03 Jan 2006; Mark Loeser <halcy0n@gentoo.org> php-toolkit-1.0.ebuild:
  Adding ~ppc

  03 Jan 2006; Markus Rothe <corsair@gentoo.org> php-toolkit-1.0.ebuild:
  Added ~ppc64

  30 Dec 2005; Luca Longinotti <chtekk@gentoo.org> php-toolkit-1.0.ebuild:
  Added ~alpha and ~ia64 keywords, kloeri's ok with it.
