@@ -1,11 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX php-select 8283 RMD160 1175e9b271ce2ca1afbd624162682d1b5afdf7f2 SHA1 5ab4d7f7210ec866081b8ec294139464a45e2a21 SHA256 3912c43bbfdf744760fdd60fc2bc84ad4b5c32a1ad4de19c381174eecce85cbb
 AUX php-select-modules/apache1.sh 508 RMD160 a698c3a202564a6985fc2d12072c5890dbe1bdee SHA1 468c2ad538006b9f93009988bfab28fd7593383e SHA256 2751943fc0cc8873ea1ee025ae56be043dd9ed97d9a33c58be6b7429cf2cc26f
 AUX php-select-modules/apache2.sh 512 RMD160 5b4ef0ff3cb8f41cfb1b0b88c5bae542d6a4037f SHA1 f7851e4d01a5a5c38bf4e7018870564ec339dc25 SHA256 7b53a2dec95e27b51aa769c4966cabdebe12393aa77b4ec1544e098f2b991c3d
-AUX php-select-modules/libapache.sh 6163 RMD160 5e3cdfaeba07ac5a38ce6b5c64f4d4e5830249a4 SHA1 22ec09171c424f7926851e0ab9e40617f9eae2f2 SHA256 a8c3b15be2ac471b461c33f17c39f7f30989e5c538b44507c19b5faebf4678c2
+AUX php-select-modules/libapache.sh 6211 RMD160 b1a5b250dd459110040547403cafd54d8896492f SHA1 520d765269e6c713adbc4e16a6f9c2e492d09ce4 SHA256 cc07a46fa16448fd12693746efc6ea57d255155f523dfb23e87d93cbbb6fc520
 AUX php-select-modules/libsymlink.sh 6495 RMD160 791c15236a6051cf70ba47abffd4775d2151d271 SHA1 e3a2d395a7cdacf13c3b97833977ee2a3e0f8a79 SHA256 062c418f4c9c7e24d5077fb200412a63cafa262d03d33d6a9bf64c9b13480a15
 AUX php-select-modules/php-cgi.sh 452 RMD160 20e91d6e9787a407473bfc136379e257ba5fdf6f SHA1 dc01e38f75044dcd68a4b653019be9d3d6665284 SHA256 d81180de8e31aaa6775f79277bfe0c1e68328cf1f62113f5d1441433aa62c680
 AUX php-select-modules/php-devel.sh 532 RMD160 cb561dd255b3099549ad2c5535376d781a733eb5 SHA1 08020f3ce87f97d08cb1b8725fbbd38fbb2c3a50 SHA256 e2d855e56e14c175f5361e1c9c3861a86ebeb09c5fe273c7e90c64ca69a242b8
 AUX php-select-modules/php.sh 436 RMD160 97b060f2476ad59dae7423ce97f4eb8c2d27d0c3 SHA1 e20d2d1cb50a7ba1fd293f3aa01e99dcb7ad11dd SHA256 6d97dc0d638fd8da3763e4536c5adccd9d9cb5b30097fc0599a00b74e268d9ce
 EBUILD php-toolkit-1.0-r2.ebuild 996 RMD160 765a9a5b83f620ac1b60a016e4754e56df1d45a9 SHA1 6f690bc3c9cc7a9c3386aa3b614ddf316b0076c2 SHA256 79717c9dc6ca844415217eb52c185d1ee63c49ad32cf83e44d6e640cad399c39
-MISC ChangeLog 2655 RMD160 bd7853d6d1be903033c336ca8f3b8814b734d458 SHA1 f7c2eaace7818f67d7b63854b54c74fff2e7f13c SHA256 e810343dc18bbf97b883d38a08ec44fc0eb83a0674c7a45c83cf8af73941f925
+MISC ChangeLog 2758 RMD160 0802c57f7fca5855eeb324cecd959a72f8e3234c SHA1 17d45184811a996771c5c86b28051b17691ba1ad SHA256 390cc40cdfd9fa6b26a7d77214280acea71cf8750971d8cd9019dd578ae9541e
 MISC metadata.xml 157 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a SHA1 ddaa23cc35eb917bf8962b652442bebb1ce0f440 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFH54FTmPFBzbX68WERAkZaAJ9Vb5pkn5n+Ofmk12tiCy4TiFtapwCaAmey
+mTQ4MantdJ/tBhOzmTZ8enM=
+=nsji
+-----END PGP SIGNATURE-----
