@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/php-toolkit
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/php-toolkit/ChangeLog,v 1.18 2006/08/25 05:24:01 sebastian Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/php-toolkit/ChangeLog,v 1.19 2008/03/24 10:24:09 hollow Exp $
+
+  24 Mar 2008; Benedikt Böhm <hollow@gentoo.org>
+  files/php-select-modules/libapache.sh:
+  fix #209535
 
   25 Aug 2006; Sebastian Bergmann <sebastian@gentoo.org>
   php-toolkit-1.0-r2.ebuild:
